--- a/.github/workflows/createRelease.yml
+++ b/.github/workflows/createRelease.yml
@@ -10,12 +10,14 @@ jobs:
     runs-on: windows-latest
     steps:
     - uses: actions/checkout@master
+      with:
+        path: 'VRLancer'
     - name: Archive Release
       uses: thedoctor0/zip-release@0.6.3
       with:
         type: 'zip'
         filename: 'VRLancer.zip'
-        exclusions: '*.git* _*'
+        exclusions: 'VRLancer/*.git* VRLancer/_*'
     - name: Upload Release
       uses: ncipollo/release-action@v1.12.0
       with:
